# Profiling__

./: .gitattributes  .gitignore  README.md
ML/Adaboost/: client  client.cpp  server  server.cpp
ML/KernelSVM/: client  client.cpp  client_updated.cpp  data_loader.cpp  server  server.cpp  server_updated.cpp  train.csv:Zone.Identifier
ML/Kmeans/: client  client.cpp  server  server.cpp
ML/LSVM/: client  client.cpp  server  server.cpp
ML/Linear_Regression/: client  client.cpp  server  server.cpp
ML/Logistic_Regression/: client  client.cpp  server  server.cpp
ML/RF/: client  client.cpp  server  server.cpp
fedtemp/: CMakeLists.txt  CMakeListsExtra.txt  build.sh
fedtemp/Digit-Recognition-MNIST-SVHN-PyTorch-CPP/: CMakeLists.txt  trace_model.py  training.cpp  training_VGG.cpp  training_traced.cpp
fedtemp/client/: FedComm.cpp  FedComm.h  client.cpp
fedtemp/common/: receive_data.cpp  send_and_receive.h  send_data.cpp
fedtemp/server/: ClientSession.cpp  ClientSession.h  CloseRequestHandler.cpp  CloseRequestHandler.h  GetIdentifierRequestHandler.cpp  GetIdentifierRequestHandler.h  GetModelRequestHandler.cpp  GetModelRequestHandler.h  GetParamsRequestHandler.cpp  GetParamsRequestHandler.h  RequestDispatcher.cpp  RequestDispatcher.h  RequestHandler.h  Server.cpp  Server.h  SubmitParamsRequestHandler.cpp  SubmitParamsRequestHandler.h
